--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,13 @@
 
 buildscript {
     repositories {
+        mavenCentral()
         jcenter()
+    }
+
+    dependencies {
+        classpath 'me.tatarka:gradle-retrolambda:3.2.3'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
     }
 }
 
@@ -10,4 +16,8 @@ allprojects {
     repositories {
         jcenter()
     }
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.9'
 }
