Moving all data types from 64-bit to 32-bit floating point precision Fixing bug affecting all listener callbacks Adapting to EyeTribe API changes, deprecating obsolete GazeManager method calls Updated Gson to 2.5

--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,13 @@
 
 buildscript {
     repositories {
-        mavenCentral()
         jcenter()
     }
 
     dependencies {
-        classpath 'me.tatarka:gradle-retrolambda:3.2.3'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
+        classpath 'me.tatarka:gradle-retrolambda:3.2.5'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6'
+        classpath 'com.google.code.findbugs:jsr305:3.0.1'
     }
 }
 
@@ -19,5 +19,5 @@ allprojects {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.9'
+    gradleVersion = '2.13'
 }
