--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'java'
 apply plugin: 'maven-publish'
 apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.jfrog.bintray'
+apply plugin: 'findbugs'
 
 def props = new Properties()
 props.load(new FileInputStream("${rootDir}/eyetribe.properties"))
@@ -30,11 +31,8 @@ retrolambda {
 
 jar {
     archivesBaseName = id
-
-    /* Include this if building non-Maven jar
-    // We include dependencies in output jar
+    
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-    */
 }
 jar.outputs.upToDateWhen {false}
 
@@ -48,72 +46,17 @@ task sourceJar (type : Jar) {
     from sourceSets.main.allSource
 }
 
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            groupId group
-            artifactId id
-            version versionCurrent
-
-            from components.java
-
-            pom.withXml {
-                asNode().children().last() + {
-                    resolveStrategy = Closure.DELEGATE_FIRST
-                    name id
-                    description 'Java SDK  for the EyeTribe Dev Kit.'
-                    url 'http://www.eyetribe.com'
-                    scm {
-                        url 'scm:https://github.com/EyeTribe/tet-java-client'
-                        connection 'scm:git@github.com:EyeTribe/tet-java-client.git'
-                        developerConnection 'scm:git@github.com:EyeTribe/tet-java-client.git'
-                    }
-                    licenses {
-                        license {
-                            name 'BSD'
-                            url 'https://opensource.org/licenses/BSD-2-Clause'
-                            distribution 'maven'
-                        }
-                    }
-                    issueManagement {
-                        system 'github'
-                        url 'https://github.com/EyeTribe/tet-java-client/issues'
-                    }
-                }
-            }
-
-            artifact (javadocJar) {
-                classifier = 'javadoc'
-            }
-
-            artifact (sourceJar) {
-                classifier = 'sources'
-            }
-        }
-    }
+findbugs {
+    ignoreFailures = true
+    toolVersion = "3.0.1"
+    sourceSets = [sourceSets.main]
+    reportsDir = file("$project.buildDir/reports/findbugs")
+    effort = "max"
 }
 
-bintray {
-    user = project.hasProperty('bintrayUser') ? project.bintrayUser : 'no-user'
-    key = project.hasProperty('bintrayKey') ? project.bintrayKey : 'no-key'
-    publications = ['mavenJava']
-
-    dryRun = true
-    publish = false
-
-    pkg {
-        repo = 'maven'
-        name = id
-        userOrg = project.hasProperty('bintrayUserOrg') ? project.bintrayUserOrg : 'no-org'
-        desc = 'https://github.com/EyeTribe/tet-java-client/blob/master/CHANGELOG.md'
-        websiteUrl = 'https://github.com/EyeTribe/tet-java-client'
-        vcsUrl = 'https://github.com/EyeTribe/tet-java-client.git'
-        licenses = ["BSD"]
-        labels = ['library','java','eyetribe','eyetracking']
-        version {
-            name = versionName
-            released = Date.parse( 'yyyy-MM-dd', project.hasProperty('releaseDate') ? project.releaseDate : '1970-01-01' )
-            vcsTag = versionName
-        }
+tasks.withType(FindBugs) {
+    reports {
+        xml.enabled = false
+        html.enabled = true
     }
 }
