--- a/javafx-sample/build.gradle
+++ b/javafx-sample/build.gradle
@@ -3,8 +3,9 @@ apply from: 'javafx.plugin'
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.guava:guava:19.0'
-    compile 'org.controlsfx:controlsfx:8.40.10'
-    compile 'com.theeyetribe:eyetribe-java:0.9.77'
+    compile 'org.controlsfx:controlsfx:8.40.12'
+    compile 'com.google.code.findbugs:jsr305:3.0.1'
+    compile 'com.theeyetribe:eyetribe-java:0.9.77+'
 }
 
 jar {
